--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -23,7 +23,8 @@ org.gradle.jvmargs=-Xmx2048m -XX:MaxMetaspaceSize=512m
 android.useAndroidX=true
 # Automatically convert third-party libraries to use AndroidX
 android.enableJetifier=true
-
+android.enableR8=true
+org.gradle.jvmargs=-Xmx4g -XX:MaxPermSize=2048m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
 # Version of flipper SDK to use with React Native
 FLIPPER_VERSION=0.125.0
 
@@ -37,4 +38,10 @@ reactNativeArchitectures=armeabi-v7a,arm64-v8a,x86,x86_64
 # your application. You should enable this flag either if you want
 # to write custom TurboModules/Fabric components OR use libraries that
 # are providing them.
+
+MYAPP_UPLOAD_STORE_FILE=release.keystore
+MYAPP_UPLOAD_KEY_ALIAS=githubaction
+MYAPP_UPLOAD_STORE_PASSWORD=b195652d73c81d89e50b373569008501
+MYAPP_UPLOAD_KEY_PASSWORD=b195652d73c81d89e50b373569008501
+
 newArchEnabled=false
