--- a/.github/workflows/hml-android.workflow.yml
+++ b/.github/workflows/hml-android.workflow.yml
@@ -9,10 +9,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - name: set up JDK 1.8
+      - name: set up JDK 11
         uses: actions/setup-java@v3
         with:
-          java-version: 1.8
+          java-version: 11
+          distribution: 'temurin'
+          cache: gradle
       - uses: actions/setup-node@v2
         with:
           node-version: '16.18.1'
