--- a/.github/workflows/hml-android.workflow.yml
+++ b/.github/workflows/hml-android.workflow.yml
@@ -39,8 +39,8 @@ jobs:
             ${{ runner.os }}-yarn-
       - name: Install
         run: yarn install --prefer-offline
-      - name: Jetify
-        run: npx jetify
+      - name: Jetifier
+        run: npx jetifier
       - name: Build
         run: cd android && ./gradlew app:assembleRelease
       - name: Firebase App Distribution
