--- a/.github/workflows/hml-android.workflow.yml
+++ b/.github/workflows/hml-android.workflow.yml
@@ -9,10 +9,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - name: set up JDK 1.8
+      - name: set up JDK 11
         uses: actions/setup-java@v3
         with:
-          java-version: 1.8
+          java-version: 11
           distribution: 'temurin'
       - uses: actions/setup-node@v2
         with:
@@ -43,10 +43,16 @@ jobs:
         run: npx jetifier
       - name: Build
         run: cd android && ./gradlew app:assembleRelease
+      - name: Fetch credential file
+        uses: ./.github/actions/base64-to-file
+        with:
+          secret: ${{ secrets.HML_CREDENTIAL_FILE_CONTENT }}
+          filename: credential_file.json
+          destination-path: $GITHUB_WORKSPACE/Firebase-Distribution-Github-Action/
       - name: Firebase App Distribution
         uses: wzieba/Firebase-Distribution-Github-Action@v1.3.3
         with:
           appId: ${{ secrets.HML_FIREBASE_APP_ID_ANDROID }}
-          serviceCredentialsFileContent: ${{ secrets.HML_CREDENTIAL_FILE_CONTENT }}
+          serviceCredentialsFileContent: Firebase-Distribution-Github-Action/credential_file.json
           groups: testraul
           file: android/app/build/outputs/apk/release/app-release.apk
