--- a/.github/workflows/hml-android.workflow.yml
+++ b/.github/workflows/hml-android.workflow.yml
@@ -47,6 +47,6 @@ jobs:
         uses: wzieba/Firebase-Distribution-Github-Action@v1.3.3
         with:
           appId: ${{ secrets.HML_FIREBASE_APP_ID_ANDROID }}
-          serviceCredentialsFileContent: ./android/app/credential_file.json
+          serviceCredentialsFileContent: android/app/credential_file.json
           groups: testraul
           file: android/app/build/outputs/apk/release/app-release.apk
